--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -38,6 +38,12 @@ h2 {
     font-family: Commissioner, sans-serif;
 }
 
+h3 {
+    @include font(2.6rem, 4rem, bold);
+    letter-spacing: 0.01em;
+    color: $color-additional;
+}
+
 h4 {
     @include font(2.6rem, 4.5rem);
     color: $color-primary;
@@ -47,4 +53,32 @@ h5 {
     @include font(2rem, 3rem);
     color: $color-primary;
     font-family: Commissioner, sans-serif;
+    margin: 0;
+}
+
+.slick-arrow {
+    position: absolute;
+    outline: none;
+    z-index: 10;
+    font-size: 0;
+    width: 1.6rem;
+    height: 2.2rem;
+    border: none;
+    cursor: pointer;
+    @extend %transition;
+    &:hover{
+        height: 2.5rem;
+    }
+    &.slick-prev{
+        background: url(./../img/ather/chevron-left.svg) no-repeat 100%;
+        background-size: cover;
+    }
+    &.slick-next {
+        background: url(./../img/ather/chevron-right.svg) no-repeat 100%;
+        background-size: cover;
+    }
+}
+
+.slick-slide:focus {
+    outline: none;
 }
