--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -461,7 +461,7 @@ template {
   display: none;
 }
 
-.navigation__item:hover, button {
+.navigation__item:hover, .button, .slick-arrow {
   transition: all 0.3s ease-out;
 }
 
@@ -487,7 +487,7 @@ a {
 }
 
 .wrapper {
-  max-width: 1270px;
+  max-width: 1170px;
   margin: 0 auto;
 }
 
@@ -511,6 +511,15 @@ h2 {
   font-family: Commissioner, sans-serif;
 }
 
+h3 {
+  font-size: 2.6rem;
+  font-style: normal;
+  font-weight: bold;
+  line-height: 4rem;
+  letter-spacing: 0.01em;
+  color: #DEC377;
+}
+
 h4 {
   font-size: 2.6rem;
   font-style: normal;
@@ -527,9 +536,36 @@ h5 {
   line-height: 3rem;
   color: rgba(0, 0, 0, 0.9);
   font-family: Commissioner, sans-serif;
+  margin: 0;
 }
 
-button {
+.slick-arrow {
+  position: absolute;
+  outline: none;
+  z-index: 10;
+  font-size: 0;
+  width: 1.6rem;
+  height: 2.2rem;
+  border: none;
+  cursor: pointer;
+}
+.slick-arrow:hover {
+  height: 2.5rem;
+}
+.slick-arrow.slick-prev {
+  background: url(./../img/ather/chevron-left.svg) no-repeat 100%;
+  background-size: cover;
+}
+.slick-arrow.slick-next {
+  background: url(./../img/ather/chevron-right.svg) no-repeat 100%;
+  background-size: cover;
+}
+
+.slick-slide:focus {
+  outline: none;
+}
+
+.button {
   padding: 1.3rem 3.5rem;
   color: #fff;
   background: #DEC377;
@@ -544,9 +580,29 @@ button {
   cursor: pointer;
   border: none;
 }
-button:hover {
+.button:hover {
   color: #DEC377;
   background: #fff;
+}
+
+.link {
+  font-size: 1.2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 2rem;
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.5);
+}
+.link:hover {
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.text {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 2.5rem;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .header {
@@ -599,6 +655,345 @@ button:hover {
   padding-bottom: 2rem;
 }
 
+.promo {
+  padding-top: 40rem;
+  background: #E5E5E5;
+}
+
+.join {
+  display: flex;
+  background: #fff;
+  margin-bottom: 10rem;
+}
+
+.join__content {
+  margin-left: 7rem;
+}
+
+.join__title {
+  padding: 5rem 0 3rem;
+}
+
+.our-work__content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.our-work__card {
+  background: #fff;
+  display: flex;
+  align-items: center;
+  flex-basis: 31.5%;
+  margin-bottom: 3rem;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.05);
+}
+
+.our-work__card-content {
+  margin: 2.5rem 7.5rem 2.5rem 4rem;
+  width: 18rem;
+  height: 9rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.our-work__card-content p {
+  margin: 0;
+}
+
+.our-work__card-img {
+  position: relative;
+}
+
+.our-work__card-img::before {
+  display: block;
+  width: 8rem;
+  height: 8rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.direction__content {
+  display: flex;
+  align-items: baseline;
+  padding: 10rem 0 6rem;
+}
+
+.direction__title {
+  flex-basis: 78%;
+}
+
+.review {
+  padding-top: 20rem;
+}
+
+.aaaa {
+  display: flex;
+  justify-content: space-between;
+}
+
+.review__slider-item {
+  flex-basis: 57rem;
+  padding-bottom: 6.5rem;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.08);
+  padding-left: 5rem;
+}
+.review__slider-item img {
+  padding-bottom: 4rem;
+  margin-left: -5rem;
+}
+.review__slider-item a {
+  font-size: 1.2rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 2rem;
+  letter-spacing: 0.02em;
+  color: rgba(0, 0, 0, 0.5);
+  text-transform: uppercase;
+  margin-bottom: 6.5rem;
+}
+.review__slider-item p {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 2.5rem;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.review__subtitle {
+  padding-bottom: 2rem;
+}
+
+.review__text {
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 2.5rem;
+  letter-spacing: 0.01em;
+  color: rgba(0, 0, 0, 0.8);
+  padding-bottom: 2.5rem;
+}
+
+.review__footer-content {
+  display: flex;
+  align-items: center;
+  padding-bottom: 4.75rem;
+}
+.review__footer-content p {
+  flex-basis: 67rem;
+}
+
+.review__footer-button {
+  margin-left: 10rem;
+  color: #DEC377;
+  border: 2px solid #DEC377;
+  background: #fff;
+}
+.review__footer-button:hover {
+  color: #fff;
+  background: #DEC377;
+}
+
+.review__partner {
+  padding-bottom: 10.75rem;
+}
+
+.review__partner-list {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0;
+}
+.review__partner-list img {
+  filter: grayscale(100%);
+}
+
+.service {
+  background: #E5E5E5;
+  padding-top: 8rem;
+}
+
+.description {
+  flex-basis: 57rem;
+  background: #fff;
+}
+
+.service__description {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-bottom: 5rem;
+}
+
+.description-grow {
+  flex-grow: 1;
+  margin-top: 30px;
+  display: flex;
+}
+
+.description__title {
+  padding-left: 5rem;
+}
+
+.description__title-grow {
+  flex-basis: 95rem;
+}
+
+.description__text {
+  padding: 1.5rem 5rem 5.5rem 5rem;
+}
+
+.description__img {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  padding-bottom: 8rem;
+}
+
+.our__services {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding-bottom: 5rem;
+}
+
+.our__services-card {
+  display: flex;
+  height: 14rem;
+  margin-bottom: 3rem;
+  background: #fff;
+}
+.our__services-card:nth-child(8n+1) {
+  flex-basis: 40.2%;
+}
+.our__services-card:nth-child(8n+1) img {
+  opacity: 40%;
+}
+.our__services-card:nth-child(8n+2) {
+  flex-basis: 57.2%;
+}
+.our__services-card:nth-child(8n+2) img {
+  opacity: 40%;
+}
+.our__services-card:nth-child(4n+3) {
+  flex-basis: 48.7%;
+}
+.our__services-card:nth-child(4n+3) img {
+  opacity: 75%;
+}
+.our__services-card:nth-child(4n+4) {
+  flex-basis: 48.7%;
+}
+.our__services-card:nth-child(4n+4) img {
+  opacity: 75%;
+}
+.our__services-card:nth-child(5) {
+  flex-basis: 57.2%;
+}
+.our__services-card:nth-child(6) {
+  flex-basis: 40.2%;
+}
+
+.our__services-card-item {
+  position: relative;
+  width: 100%;
+}
+.our__services-card-item a {
+  position: absolute;
+  bottom: 2rem;
+  right: 3rem;
+}
+
+.our__services-title {
+  padding: 2.5rem 0 0 3rem;
+}
+
+.our__services_footer {
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+  padding-bottom: 10rem;
+}
+
+.our__services_footer-text {
+  flex-basis: 67rem;
+}
+
+.protection__content {
+  display: flex;
+  padding-top: 8rem;
+  padding-bottom: 3rem;
+}
+.protection__content:first-child {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+.protection__content:nth-child(2) {
+  padding-top: 6rem;
+}
+
+.protection__description {
+  flex-basis: 47rem;
+  margin-right: 14.9rem;
+}
+
+.protection__list {
+  flex-basis: 44rem;
+  font-size: 1.7rem;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 3rem;
+  color: rgba(0, 0, 0, 0.75);
+  letter-spacing: 0.01em;
+}
+.protection__list li {
+  display: flex;
+  align-items: center;
+}
+.protection__list li::before {
+  content: url(./../img/ather/big-list-marker.png);
+  padding-right: 2rem;
+}
+
+.advantage {
+  background: #E5E5E5;
+  padding-top: 8rem;
+}
+
+.advantage__title {
+  margin: 0;
+}
+
+.advantage__main {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 3.5rem;
+}
+
+.advantage__footer {
+  background: #fff;
+  position: relative;
+}
+.advantage__footer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  border-top: 80px solid #DEC377;
+  border-left: 80px solid transparent;
+  width: 0;
+}
+
+.advantage__footer_text {
+  padding: 4rem 0 4.5rem 5rem;
+  text-align: left;
+  width: 74rem;
+}
+
 .header__nav {
   display: flex;
   justify-content: space-between;
@@ -630,7 +1025,6 @@ button:hover {
 }
 
 .slider__wrapper {
-  position: relative;
   height: 65rem;
 }
 
@@ -653,18 +1047,9 @@ button:hover {
   padding-bottom: 5rem;
 }
 
-.slider__arrow {
+.slider__button {
   position: absolute;
-  left: 3rem;
-  bottom: 7rem;
-  width: 10rem;
-  display: flex;
-  justify-content: space-between;
-}
-.slider__arrow img {
-  width: 1.6rem;
-  height: auto;
-  cursor: pointer;
+  bottom: 27%;
 }
 
 .item1 {
@@ -700,6 +1085,159 @@ button:hover {
   width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.slick-track {
+  display: flex;
+}
+
+.slider .slick-arrow {
+  bottom: 15.5%;
+}
+.slider .slick-arrow.slick-prev {
+  left: 21%;
+}
+.slider .slick-arrow.slick-next {
+  right: 74%;
+}
+
+.direction__slider {
+  position: relative;
+}
+.direction__slider .slick-list {
+  position: inherit;
+  top: 10rem;
+}
+
+.direction__slider .slick-arrow {
+  top: 68%;
+}
+.direction__slider .slick-arrow.slick-prev {
+  left: -5%;
+}
+.direction__slider .slick-arrow.slick-next {
+  right: -5%;
+}
+
+.direction__slider .slick-list {
+  overflow: hidden;
+  margin-bottom: 5rem;
+}
+
+.review__slider {
+  position: relative;
+}
+.review__slider .slick-list {
+  overflow: hidden;
+  padding-bottom: 5rem;
+}
+
+.slick-dots {
+  display: flex;
+  width: 5rem;
+  justify-content: space-between;
+  margin: 0 auto;
+  padding: 0;
+}
+.slick-dots li button {
+  font-size: 0;
+  padding: 0;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+  border: none;
+  background: #DEC377;
+  outline: none;
+}
+
+.review__slider .slick-arrow {
+  bottom: 0;
+}
+.review__slider .slick-arrow.slick-prev {
+  right: 10%;
+}
+.review__slider .slick-arrow.slick-next {
+  right: 5%;
+}
+
+.dots-style {
+  font-size: 0;
+  padding: 0;
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50%;
+}
+
+.button__review-slider {
+  position: relative;
+  bottom: 3rem;
+  margin-bottom: 10rem;
+}
+
+.card {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  width: 1170px;
+  left: 50%;
+  transform: translate(-50%, -20%);
+}
+.card img {
+  padding: 3rem;
+  border: 3px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  margin: 5rem 5.5rem 2.5rem;
+}
+
+.card__item {
+  background: #fff;
+}
+
+.card__text {
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 2.5rem;
+  max-width: 230px;
+  margin: 0 auto;
+  letter-spacing: 0.02em;
+  color: rgba(0, 0, 0, 0.75);
+  padding-bottom: 4rem;
+}
+
+.advantage__card {
+  flex-basis: 23%;
+  text-align: center;
+  background: #fff;
+  margin-bottom: 4rem;
+}
+
+.advantage__card_img {
+  position: relative;
+  margin: 8rem 0 5.5rem;
+}
+.advantage__card_img:before {
+  display: block;
+  width: 12rem;
+  height: 12rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.advantage__card_text {
+  font-size: 1.6rem;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 2.5rem;
+  letter-spacing: 0.02em;
+  color: rgba(0, 0, 0, 0.75);
+  padding: 0 2rem 4rem 2rem;
 }
 
 /*# sourceMappingURL=style.css.map */
