--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,6 +22,7 @@
 @import "layouts/service";
 @import "layouts/protection";
 @import "layouts/advantage";
+@import "layouts/contact";
 
 // Components
 @import "components/navigation";
