--- a/src/sass/style.css
+++ b/src/sass/style.css
@@ -962,6 +962,7 @@ h5 {
 .advantage {
   background: #E5E5E5;
   padding-top: 8rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .advantage__title {
@@ -992,6 +993,216 @@ h5 {
   padding: 4rem 0 4.5rem 5rem;
   text-align: left;
   width: 74rem;
+}
+
+.cooperations {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10rem;
+}
+
+.cooperations__content {
+  flex-basis: 42.7%;
+}
+
+.cooperations__form {
+  flex-basis: 48.7%;
+  background: #fff;
+}
+
+.cooperations__list {
+  display: flex;
+  padding-bottom: 3rem;
+}
+.cooperations__list img {
+  padding-right: 3rem;
+}
+
+.cooperation__content__footer {
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 2.5rem;
+  letter-spacing: 0.01em;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.contact-form {
+  padding: 4rem 5rem 0 5rem;
+}
+.contact-form input {
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  outline: none;
+  margin-bottom: 2rem;
+}
+.contact-form input:focus {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+.contact-form input::placeholder {
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 2.5rem;
+  opacity: 0.6;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.contact-form__input {
+  padding: 0 0 0.4rem 1rem;
+  font-size: 1.5rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 2.5rem;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.contact-form__title {
+  font-family: "Commissioner", sans-serif;
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 2rem;
+  letter-spacing: 0.01em;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.form__description {
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 2rem;
+  line-height: 20px;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.form__description_link {
+  color: rgba(0, 0, 0, 0.5);
+  font-weight: 600;
+}
+
+.contact-form__button {
+  width: 100%;
+}
+
+.price {
+  max-width: 67rem;
+  padding-bottom: 10rem;
+}
+
+.price__title {
+  padding-bottom: 3rem;
+}
+
+.price__button {
+  margin-top: 3rem;
+  width: 20rem;
+}
+
+.contact {
+  padding-top: 5rem;
+  background: #E5E5E5;
+}
+
+.contact__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.contact__name {
+  padding-bottom: 7rem;
+}
+
+.contact__name_info {
+  font-family: "Commissioner", sans-serif;
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 2rem;
+  letter-spacing: 0.01em;
+  color: rgba(0, 0, 0, 0.5);
+}
+.contact__name_info span {
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+}
+
+.contact__info_list {
+  margin-top: 6rem;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 25.5rem;
+}
+
+.our__office {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin: 0 3rem;
+}
+.our__office ul {
+  padding: 0;
+}
+
+.contact__city {
+  font-family: "Commissioner", sans-serif;
+  font-size: 1.4rem;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 2.5rem;
+  letter-spacing: 0.04em;
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.contact__link_tel {
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 2rem;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.contact__link_mail {
+  font-family: "Commissioner", sans-serif;
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 2rem;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.contact__subtitle {
+  font-family: "Commissioner", sans-serif;
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 2rem;
+  color: rgba(0, 0, 0, 0.75);
+}
+
+.our__office_title {
+  flex-basis: 100%;
+  text-transform: uppercase;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.work__time {
+  text-transform: uppercase;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.contact__info {
+  flex-basis: 30%;
+}
+
+.contact__text {
+  font-size: 1.3rem;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 2rem;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .header__nav {
